5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1594_1803.log
== TEST (2019-04-04 16:07:30) 
-- CODE:
a = int(input("a:"))

a1 = (a*2)
a2 = (b*3)
a3 = (c*4)
a4 = (d*5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a2 = (b*3)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:07:38) 
-- CODE:
a = int(input("a:"))

a1 = (a*2)
a2 = (b*3)
a3 = (c*4)
a4 = (d*5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a2 = (b*3)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:12:37) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = (a%10)

w = a1*5
x = a2*4
y = a3*3
z = a4*2

var = (w+x+y+z)%11
print(var)

-- EXECUTION TIME:
0.166041
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:13:05) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = (a%10)

w = a1*5
x = a2*4
y = a3*3
z = a4*2

var = (w+x+y+z)%11
print(var)

-- EXECUTION TIME:
0.195643
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:13:14) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = (a%10)

w = a1*5
x = a2*4
y = a3*3
z = a4*2

var = (w+x+y+z)%11
print(var)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:13:22) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = (a%10)

w = a1*5
x = a2*4
y = a3*3
z = a4*2

var = (w+x+y+z)%11
print(var)

-- EXECUTION TIME:
0.160612
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:53:20) 
-- CODE:
a = int(input("a:"))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = (a%10)

w = a1*5
x = a2*4
y = a3*3
z = a4*2

var = (w+x+y+z)%11
print(var)

-- EXECUTION TIME:
0.201449
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
